# matplot

./: CMakeLists.txt  README.md
inc/: main.hpp  math.hpp  window.hpp
src/: main.cpp  math.cpp  window.cpp
